--- a/page/style.css
+++ b/page/style.css
@@ -276,3 +276,9 @@ body {
     background: #52db82;
   }
   
+
+  #ad-container {
+  width: 100%;   /* or a fixed width like 300px */
+  min-width: 300px; /* optional */
+  height: 250px; /* optional, for testing */
+}
